zh/manual/v1.4.0/features/timer.mdx
---
title: "定时任务"
description: "AutoLibrary 定时任务管理 - 添加、编辑、删除定时任务与 AutoScript 集成"
---

使用内置定时任务管理，添加定时任务后在指定时间按当前预约信息自动运行。
支持设置重复周期，如每周一、周三、周五自动执行。

在定时任务中集成 AutoScript 脚本，在任务执行前自动调整预约参数。

## 打开定时任务管理

点击主界面窗口底部左侧的 [<Icon icon="clock" />] 按钮，打开定时任务管理窗口。

![定时任务管理窗口](/images/v1.4.0/timer-management-window.png)

![功能介绍-定时任务](/images/v1.4.0/feature-timer.png)


## 添加定时任务

点击 [**添加任务**] 按钮，在弹出的对话框中配置任务参数：

![添加定时任务对话框](/images/v1.4.0/add-timer-dialog.png)

<Info>
  添加后任务将显示在列表中，状态为"等待中"。到达指定时间后自动执行。
</Info>

### 定时类型

| 选项 | 说明 | 示例 |
| --- | --- | --- |
| [**特定时间**] | 指定任务开始的绝对时间 | `2025-10-30 08:00:00` |
| [**相对时间**] | 相对当前时间的偏移量 | 提前 1 天、提前 2 小时、提前 30 分钟 |

### 运行模式

| 选项 | 行为 | 适用场景 |
| --- | --- | --- |
| [**静默运行**] | 任务执行时不会弹出窗口，完成后右下角通知 | 完全自动化，无需人工干预 |
| [**运行前提示**] | 任务执行前显示提示信息 | 需要在运行前确认或查看进度 |

<Tip>
  如需完全静默运行：在配置界面的系统设置中勾选 [**无头模式**]，并在程序托盘中右键选择 [**最小化到托盘**]。这样定时任务运行时不会显示主界面和浏览器窗口，仅在完成时弹出系统通知。
</Tip>

### 重复执行

勾选 [**启用重复执行**] 后，可以按周循环执行此任务：

- 选择需要运行的天（如：每周一、周三、周五）
- 需要每天运行则勾选全部

<Note>
  重复周期选项中，全选和全不选均等同于每天重复执行。
</Note>

## AutoScript 自动化脚本

AutoScript 是基于 Lua 语言的自动化脚本引擎，支持基础的条件判断和算术表达式语法，
可在**重复性**定时任务运行前对预约参数进行动态调整，比如能够实现以下场景：

- 根据当前日期动态调整预约时间
- 根据当前星期判断是否需要预约
- 根据用户状态自动切换预约参数

<Note>
  AutoScript 自动化脚本仅支持在**重复性**定时任务中配置，请务必
  勾选 [**启用重复执行**] 以使用 AutoScript 脚本。
</Note>

<Card
  title="AutoScript 手册"
  icon="code"
  href="/zh/autoscript/index"
>
  查看完整的 AutoScript 语法指引、工具使用说明和集成方法。
</Card>

<Steps>
  <Step title="编写 AutoScript 脚本">
    在添加或编辑定时任务对话框中，点击 [**AutoScript 指令**] 区域
    的 [**编辑**] 按钮，打开代码编辑器编写脚本。

    例如，以下脚本将每次任务的预约日期设为明天，开始时间设为上午 9:00：

    ```lua
    RESERVE_DATE = dateadd(datenow(), 1)
    RESERVE_BEGIN_TIME = time(9, 0)
    ```
  </Step>
  <Step title="保存脚本">
    在编辑器中点击 [**确认**]，脚本将直接保存到当前定时任务的配置中。无需手动管理外部脚本文件。
  </Step>
  <Step title="验证脚本效果">
    建议结合使用 AutoScript 编辑器的 [**调试运行**] 功能，在模拟数据上验证脚本逻辑，确保参数调整符合预期。
  </Step>
</Steps>

<Info>
  AutoScript 脚本在定时任务每次执行前独立运行，针对每个启用的用户组和用户依次应用。脚本修改的参数仅影响当次执行，
  不会回写到用户配置文件。详见 [AutoScript 集成](/zh/autoscript/integration)。
</Info>

## 编辑定时任务

支持对已创建的定时任务进行编辑修改，无需删除重建。

<Steps>
  <Step title="打开编辑菜单">
    在定时任务管理窗口中，在任务列表中的任意任务项上单击**鼠标右键**，在弹出的菜单中选择 [**编辑**]。

    ![定时任务右键编辑菜单](/images/v1.4.0/timer-context-menu-edit.png)
  </Step>
  <Step title="修改配置">
    编辑对话框将显示任务的当前配置。您可以修改：
    - 任务名称
    - 定时时间
    - 运行模式
    - AutoScript 脚本（通过内置编辑器管理）
    - 将普通任务转换为可重复性任务（反之亦然）
  </Step>
</Steps>

<Info>
  编辑任务时，任务的 UUID 和执行历史（可重复性任务）将被保留。修改执行时间后，状态将重置为"等待中"。
</Info>

## 删除定时任务

可通过以下两种方式移除定时任务：

- 右键菜单选择 [**删除**]
- 点击任务项右侧的 [**删除**] 按钮

<Warning>
  删除可重复性任务将同时清除该任务的所有执行历史记录。
</Warning>
